# api/handler/user.go
@@ -3,6 +3,7 @@ package handler
 import (
 	"context"
 	"grscan/api/models"
+	"grscan/pkg/check"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
@@ -27,11 +28,31 @@ func (h Handler) CreateUser(c *gin.Context) {
 		return
 	}
 
-	resp, err := h.services.User().Create(context.Background(), createUser)
-	if err != nil {
-		handleResponse(c, h.log, "error is while creating category", http.StatusInternalServerError, err.Error())
+	if !check.PhoneNumber(createUser.Phone) {
+		handleResponse(c, h.log, "Incorrect phone number", http.StatusBadRequest, nil)
 		return
 	}
 
-	handleResponse(c, h.log, "", http.StatusCreated, resp)
+	if !check.ValidatePassword(createUser.Password) {
+		handleResponse(c, h.log, "Invalid password", http.StatusBadRequest, nil)
+		return
+	}
+
+	exists, err := check.IsLoginExist(createUser.Login, h.storage.User())
+    if err != nil {
+        handleResponse(c, h.log, "Error while checking login existence", http.StatusInternalServerError, nil)
+        return
+    }
+    if exists {
+        handleResponse(c, h.log, "Login already exists", http.StatusBadRequest, "This login already exists")
+        return
+    }
+
+	resp, err := h.services.User().Create(context.Background(), createUser)
+	if err != nil {
+		handleResponse(c, h.log, "Error while creating user", http.StatusInternalServerError, err)
+		return
+	}
+
+	handleResponse(c, h.log, "User created successfully", http.StatusCreated, resp)
 }
