# api/router.go
@@ -4,22 +4,24 @@ import (
 	"grscan/api/handler"
 	"grscan/pkg/logger"
 	"grscan/service"
-	"fmt"
-	"log"
-	"time"
+	"grscan/storage"
+
+	_ "grscan/api/docs"
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	_"grscan/api/docs"
 )
 
-func New(services service.IServiceManager, log logger.ILogger) *gin.Engine {
-	h := handler.New(services, log)
+func New(services service.IServiceManager, storage storage.IStorage, log logger.ILogger) *gin.Engine {
+	h := handler.New(services, storage, log)
 
 	r := gin.New()
 
-	r.Use(traceRequest(log))
+	r.Use(gin.Logger())
+
+	// auth endpoints
+	r.POST("/auth/customer/login", h.CustomerLogin)
 
 	r.POST("/user", h.CreateUser)
 	// r.GET("/user/:id", h.Getuser)
@@ -32,36 +34,4 @@ func New(services service.IServiceManager, log logger.ILogger) *gin.Engine {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
 	return r
-}
-
-func traceRequest(log logger.ILogger) gin.HandlerFunc {
-	return func(c *gin.Context) {
-		beforeRequest(c, log)
-
-		c.Next()
-
-		afterRequest(c)
-	}
-}
-
-func beforeRequest(c *gin.Context, log logger.ILogger) {
-	startTime := time.Now()
-
-	c.Set("start_time", startTime)
-
-	log.Info("Request started", logger.String("start_time", startTime.Format(time.RFC3339)), logger.String("path", c.Request.URL.Path))
-}
-
-func afterRequest(c *gin.Context) {
-	startTime, exists := c.Get("start_time")
-	if !exists {
-		startTime = time.Now()
-	}
-
-	duration := time.Since(startTime.(time.Time)).Nanoseconds()
-
-	statusCode := c.Writer.Status() 
-
-	log.Println("end time:", time.Now().Format("2006-01-02 15:04:05.0000"), "method:", c.Request.Method, "Status code:", statusCode, "duration nanoseconds:", duration)
-	fmt.Println()
 }
